added just to be safe

--- a/vulnerabilities/example1/makefile
+++ b/vulnerabilities/example1/makefile
@@ -2,13 +2,14 @@
 CC=afl-clang-fast
 #CC=afl-clang
 FLAGS= -static
-EFLAGS= -fsanitize=address,undefined -fno-sanitize-recover=unsigned-integer-overflow,undefined -g -O0
+EFLAGS= -fsanitize=address,undefined -fno-sanitize-recover=undefined -g -O0
 BASE_FLAGS= -fsanitize=address -g
 EXE=harn
 
 #main: harness afl
 
 main: harness afl
+
 persistent_afl: harness_p afl
 
 lib: libFuzzTest libExecute
@@ -24,7 +25,7 @@ harness_p:
 	$(CC) $(EFLAGS) ./harness_persistent.c vul.c -o $(EXE) -w
 
 harness_gcc:
-	gcc  -fsanitize=address -Wall -g ./harness.c vul.c -o $(EXE) -w
+	gcc -fsanitize=address -Wall -g ./harness.c vul.c -o $(EXE) -w
 
 harness_clang:
 	clang -fsanitize=address -Wall -g ./harness.c vul.c -o $(EXE) -w
@@ -34,8 +35,9 @@ valgrind: harness_gcc
 
 afl:
 	afl-fuzz -m none -i in -o out ./$(EXE)
+
 ASAN_OPT:
-	ASAN_OPTIONS='detect_leaks=1:abort_on_error=1:symbolize=0:allocator_may_return_null=1'
+	ASAN_OPTIONS='detect_leaks=1:leak_check_at_exit=1:abort_on_error=1:symbolize=0'
 
 #-----ONLY RUN IF YOU HAVE MORE THAN 1 CORE
 master:
@@ -64,3 +66,6 @@ remExecutable:
 
 remDir:
 	rm -f -r crash-* out* a.out
+
+# ASAN_OPTIONS COMMANDS
+#export ASAN_OPTIONS="detect_leaks=0:abort_on_error=1:symbolize=0:allocator_may_return_null=1"
