simple commit to add some info in the README and a new file to have better information about the instrumentation

--- a/vulnerabilities/example1/makefile
+++ b/vulnerabilities/example1/makefile
@@ -58,6 +58,10 @@ libExecute:
 	./first_fuzzer corpus1
 
 
+#------------------------ OTHER -------------------------#
+simple:
+	$(CC) $(EFLAGS) ./simple_program.c -o simple -w
+
 #--------CLEANING---------
 
 clean: remExecutable remDir
